syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message SpreadPrint {
    message PKey {
        
        TickerKey skey = 10; // SR assigned Spread TickerKey (can be found in ProductDefinition)
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    TickerKey ticker = 100; // common spread underlier
    int64 sRspread_iD = 122;
    BuySell side = 103;
    int32 prt_size = 106;
    double prt_price = 109;
    OptExch prt_exch = 112;
    int64 src_timestamp = 115; // source high precision timestamp (if available)
    int64 net_timestamp = 118; // PTP timestamp
    google.protobuf.Timestamp timestamp = 121;
}


